--- a/Project_SpringBoot/src/main/resources/application.yml
+++ b/Project_SpringBoot/src/main/resources/application.yml
@@ -14,8 +14,13 @@ mybatis:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
 logging:
-  level:
-    root:INFO
-    org.mybatis:DEBUG
+  root:
+    level: DEBUG
+
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
+  params: count=countSql
 
 
